smesh_v3_migration_scripts/networkpolicies/egress-allow-istio-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-istio-system
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: istio-system
  podSelector: {}
  policyTypes:
  - Egress
