smesh_v3_migration_scripts/networkpolicies/ingress-allow-istio-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-istio-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: istio-system
  podSelector: {}
  policyTypes:
  - Ingress
